# girokserver-python

./: .cz.toml  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_temp  README.md  docker-compose.yml  pyproject.toml
.aws/: girok-server-task-def-prod.json
.github/workflows/: aws.yml
cli/: calendar_app.py  calendar_container.py  config.json  config.py  constants.py  demo_dock.css  demo_dock.py  girok.py  requirements.txt  sidebar.py
cli/api/: auth.py  category.py  task.py
cli/calendar_app/: demo1.py  demo_dock.py  test.css
cli/calendar_app_temp/: demo_css.css  demo_css.py  demo_grid.css  demo_grid.py  demo_layout.css  demo_layout.py  test.py
cli/calendar_cli/: calendar_app.py  calendar_container.py  calendar_main.py  timer.py
cli/commands/: auth.py  calendar.py  category.py  task.py
cli/utils/: auth.py  calendar.py  display.py  general.py  task.py
girok/: __main__.py  config.py  container.py  server.py
girok/core/authentication/: token_manager.py
girok/core/base_class/: base_repository.py  base_service.py  pydantic_model.py
girok/core/db/: session.py  session_maker.py  transactional.py
girok/core/dependencies/: auth.py
girok/core/email/: email_manager.py
girok/core/exceptions/: base.py  emitter.py  middleware.py  token.py  validation.py
girok/core/middlewares/: authentication.py  sqlalchemy.py
girok/core/utils/: auth.py  validation.py
girok/domain/: exceptions.py
girok/domain/auth/: container.py  service.py  views.py
girok/domain/category/: container.py  dtos.py  exceptions.py  models.py  repository.py  service.py  views.py
girok/domain/user/: container.py  dtos.py  exceptions.py  models.py  repository.py  service.py  views.py
server/: Dockerfile
server/src/: config.py  database.py  dependencies.py  exceptions.py  main.py  utils.py
server/src/auth/: config.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
server/src/calendar/: exceptions.py  models.py  router.py  schemas.py  service.py
server/src/category/: constants.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
server/src/email/: __init__.py  config.py  email.py  reset_password.html  utils.py  verification.html
server/src/task/: exceptions.py  models.py  router.py  schemas.py  service.py
server/src/user/: exceptions.py  models.py  router.py  schemas.py  service.py
src/: config.py  database.py  dependencies.py  exceptions.py  main.py  utils.py
src/application/auth/: dtos.py  routers.py
src/application/event/: dtos.py  exceptions.py  routers.py
src/application/event_category/: dtos.py  exceptions.py  routers.py
src/application/exceptions/: auth_exceptions.py
src/application/user/: dtos.py  routers.py
src/auth/: config.py  exceptions.py  router.py  schemas.py  service.py  utils.py
src/category/: constants.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
src/dependencies/: auth_dependencies.py  event_category_dependencies.py  event_dependencies.py  user_dependencies.py
src/domain/event/: exceptions.py  services.py
src/domain/event_category/: entities.py  exceptions.py  services.py
src/domain/exceptions/: auth_exceptions.py
src/domain/user/: dtos.py  entities.py  services.py
src/email/: __init__.py  config.py  email.py  utils.py
src/infrastructure/auth/: auth_handler.py  (+3 more)
src/shared/: constants.py  exceptions.py
src/task/: enums.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
src/user/: exceptions.py  models.py  router.py  schemas.py  service.py
src_[refactoring]/: config.py  main.py
src_[refactoring]/dependencies/: auth_dependencies.py  event_category_dependencies.py  event_dependencies.py  user_dependencies.py
(+77 files in other folders)
