[tool.poetry]
name = "girokserver"
version = "0.1.0"
description = "Girok Server"
authors = ["Changjin Lee <changjin9792@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.86.0"
bcrypt = "4.0.1"
cryptography = "38.0.3"
decorator = "5.1.1"
email-validator = "1.1.3"
fastjsonschema = "2.15.3"
fastapi-mail = "1.2.0"
fastapi-jwt-auth = "0.5.0"
httpx = "0.23.0"
jinja2 = "3.0.3"
jsonschema = "4.4.0"
pydantic = "1.10.12"
pymysql = "1.0.2"
python-dotenv = "0.19.2"
python-jose = "3.3.0"
python-multipart = "0.0.5"
python-slugify = "5.0.2"
requests = "2.26.0"
sqlalchemy-imageattach = "1.1.0"
sqlalchemy = "1.4.43"
passlib = "1.7.4"
python-dateutil = "2.8.2"
starlette = "0.20.4"
uvicorn = "0.15.0"
urllib3 = "1.26.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.287"
black = "^23.9.0"
isort = "^5.12.0"
pre-commit = "^3.4.0"

[tool.ruff]
line-length = 120
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
]
target-version = "py310"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
